modified:   index.html

--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
 
 
     <!-- 第一章 -->
-    <div class="section section-margin-bottom" id="chapter-1">
+    <div class="section" id="chapter-1">
         <div class="container container-padding-top">
             <div class="row">
                 <div class="col-12" data-aos="fade-up" data-aos-duration="1100">
-                    <div class="section-title text-center">
+                    <div class="section-title text-center" style="padding-bottom: 0px;">
                         <div id="chapter-1-title"> <!-- 第一章标题（移动端换行）-->
                             <div class="desktop-content">
                                 <h2 class="m-auto">前言</h2>
@@ -164,7 +164,7 @@
                 </div>
             </div>
 
-            <div class="row" id="chapter-1-bottom">
+            <div class="row">
                 <div class="col-12" data-aos="fade-up" data-aos-duration="1100">
                     <div class="section-title text-center">
                         <span class="d-flex justify-content-center"></span>
@@ -189,6 +189,7 @@
                     </div>
                 </div>
             </div>
+            <div id="chapter-1-bottom"></div> <!-- 底部 -->
         </div>
     </div>
 
@@ -219,8 +220,7 @@
         </div>
         <!-- 正文 -->
         <div style="background-color: #F2F6FA;">
-            <div class="container container-padding-top">
-
+            <div class="container">
                 <div class="col-12" data-aos="fade-up" data-aos-duration="1100">
                     <div class="section-title text-center">
                         <div class="desktop-content">
@@ -339,12 +339,10 @@
                                 约有 50% 的受访者提到他们在中国学习期间面临学业压力，<br>可能与不同的学习环境和要求有关。
                             </p>
                         </div>
-                        <div id="chapter-2-bottom">
-
-                        </div>
                     </div>
                 </div>
             </div>
+        <div id="chapter-2-bottom"></div> <!-- 底部 -->
         </div>
     </div>
 
@@ -353,7 +351,7 @@
         <!-- 标题 -->
         <div class="container container-padding-top">
             <div class="col-12" data-aos="fade-up" data-aos-duration="1100">
-                <div class="section-title text-center">
+                <div class="section-title text-center" style="padding-bottom: 0px;">
                     <div id="chapter-3-title"> <!-- 第三章标题 -->
                         <h2 class="m-auto">第三章</h2>
                         <h3 class="m-auto">在华留学生与文化交际</h3>
@@ -366,8 +364,8 @@
             </div>
         </div>
         <!-- 正文 -->
-        <div class="col-12 section-title text-center container-padding-top" data-aos="fade-up" data-aos-duration="1100">
-            <div class="container">
+        <div class="col-12 section-title text-center" data-aos="fade-up" data-aos-duration="1100">
+            <div class="container container-padding-top">
                 <!-- 电脑端内容 -->
                 <div class="desktop-content">
                     <p class="m-auto line-height-3">
@@ -386,7 +384,7 @@
                     </p>
                 </div>
                 <!-- 图片 -->
-                <div class="section gallery-section" style="padding-top: 30px;">
+                <div class="section gallery-section" style="padding-top: 30px; padding-bottom: 30px;">
                     <div class="container">
                         <div class="row">
                             <div class="col-lg-12" data-aos="fade-up" data-aos-duration="1800">
@@ -425,13 +423,24 @@
                 </div>
                 <!-- 电脑端内容 -->
                 <div class="desktop-content">
+                    <p class="m-auto line-height-3"> 
+                        在这里，他们是中外文化的交汇处，是跨越国界的心灵相遇点。
 
+                        在华留学生不仅是异域文化的传播者，更是中华文化向外传播的有机渠道。
+                        他们在学习、见证、传播中国政治、经济、文化的同时，为世界各国提供了了解真实中国的窗口。在中外交流中起到了重要的桥梁作用，对于向世界展现我国的真实面貌发挥了重要作用。
+                    </p>
                 </div>
                 <!-- 移动端内容 -->
                 <div class="mobile-content">
+                    <p class="m-auto line-height-3"> 
+                        在这里，他们是中外文化的交汇处，是跨越国界的心灵相遇点。
 
+                        在华留学生不仅是异域文化的传播者，更是中华文化向外传播的有机渠道。
+                        他们在学习、见证、传播中国政治、经济、文化的同时，为世界各国提供了了解真实中国的窗口。在中外交流中起到了重要的桥梁作用，对于向世界展现我国的真实面貌发挥了重要作用。
+                    </p>
                 </div>
             </div>
+            <div id="chapter-3-bottom"></div> <!-- 底部 -->
         </div>
     </div>
 
