--- a/index.html
+++ b/index.html
@@ -84,6 +84,26 @@
         </div>
     </div>
 
+    <div id="chaper-3-header" class="text-center header shadow-box hidden">
+        <div class="desktop-content">
+            <h4 class="m-auto">第三章 | 在华留学生与文化交际</h4>
+        </div>
+        <div class="mobile-content">
+            <h3 class="title">第三章</h3>
+            <h4 class="m-auto">在华留学生与文化交际</h4>
+        </div>
+    </div>
+
+    <div id="chaper-4-header" class="text-center header shadow-box hidden">
+        <div class="desktop-content">
+            <h4 class="m-auto">第四章 | 展望</h4>
+        </div>
+        <div class="mobile-content">
+            <h3 class="title">第四章</h3>
+            <h4 class="m-auto">展望</h4>
+        </div>
+    </div>
+
 
     <!-- 标题区域 -->
     <div class="bgimg-1">
@@ -181,7 +201,7 @@
                             </p>
                         </div>
                     </div>
-                    <div id="chart_div" style="width: 400px; height: 400px; margin: 0 auto"></div>
+                    <div class="chart-center" id="chart_div"></div>
                     <div class="section-title text-center">
                         <p class="m-auto line-height-3">
                             我国一直以来都欢迎世界各地的留学生来华学习，我们对留学生提供了一系列的优惠政策，包括奖学金、简化签证手续、扩大就业范围等。随着我国国际地位的不断提高，来华留学生的数量也在逐年增加。在华留学生在享受我国提供的便利的同时，也需要适应我国的文化和生活方式，这是一个双向的过程，也是世界了解我国的一个重要途径。
@@ -264,7 +284,7 @@
                         </div>
 
                         <!-- 这里需要一张图表 -->
-                        <div id="chart_2" style="width: 400px; height: 400px; margin: 0 auto"></div>
+                        <div class="chart-center" id="chart_2"></div>
                         <p></p>
 
                         <!-- 电脑端内容 -->
@@ -364,7 +384,7 @@
             </div>
         </div>
         <!-- 正文 -->
-        <div class="col-12 section-title text-center" data-aos="fade-up" data-aos-duration="1100">
+        <div class="col-12 section-title text-center"  style="padding-bottom: 0px;" data-aos="fade-up" data-aos-duration="1100">
             <div class="container container-padding-top">
                 <!-- 电脑端内容 -->
                 <div class="desktop-content">
@@ -407,7 +427,7 @@
                                         </div>
                                         <!-- Single Gallery End -->
                                     </div>
-                                    <div class="col-md-6 col-lg-4 m-b-50 filter-item item1 item2 item3 item4">
+                                    <div class="col-md-6 col-lg-4 m-b-50 filter-item item1 item3">
                                         <!-- Single Gallery Start -->
                                         <div class="single-gallery">
                                             <div class="gallery-thumb">
