modified:   index.html

--- a/index.html
+++ b/index.html
@@ -490,16 +490,10 @@
                         <p class="m-auto">相关数据收集仍在进行中，将不时更新调查结果，并根据结果调整网页。</p>
                         <span class="d-flex justify-content-center"></span>
                         <p class="m-auto">小组成员：夏荣鑫 张斐 谢建双</p>
-                        <p class="m-auto">数据收集：</p>
+                        <p class="m-auto">数据收集：夏荣鑫 张斐</p>
                         <p class="m-auto">网站制作：谢建双</p>
-                        <p class="m-auto">指导教师：</p>
-                        <span class="d-flex justify-content-center"></span>
-                        <p class="m-auto">参考文献：</p>
-                        <span class="d-flex justify-content-center"></span>
-                        <p class="m-auto"></p>
-
+                        <p class="m-auto">指导教师：陈杰</p>
                     </div>
-
                 </div>
             </div>
         </div>
