new file:   fonts/SongTi.ttf 	modified:   img/chapter2.jpg 	modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     h1 {
         letter-spacing: 5px;
         text-transform: uppercase;
-        font: 50px "puhuiti_bold", sans-serif;
+        font: 50px "puhuiti", sans-serif;
         color: #fff;
         border: 0px;
     }
@@ -31,7 +31,7 @@
     h2 {
         letter-spacing: 5px;
         text-transform: uppercase;
-        font: 40px "puhuiti_regular", sans-serif;
+        font: 40px "puhuiti", sans-serif;
         font-weight: bold;
         color: #111;
         border: 0px;
@@ -40,7 +40,7 @@
     h3 {
         letter-spacing: 5px;
         text-transform: uppercase;
-        font: 30px "puhuiti_regular", sans-serif;
+        font: 30px "puhuiti", sans-serif;
         font-weight: bold;
         color: #111;
         border: 0px;
@@ -49,7 +49,7 @@
     h4 {
         letter-spacing: 5px;
         text-transform: uppercase;
-        font: 22px "puhuiti_regular", sans-serif;
+        font: 22px "puhuiti", sans-serif;
         font-weight: bold;
         color: #111;
         border: 0px;
@@ -314,33 +314,40 @@
                             </p>
                             <p></p>
                             <p class="m-auto line-height-3">
-                                语言障碍可能是最直观的困难之一。根据深度访谈调查，有许多在华留学生表示，语言障碍是最大的挑战：“我花了两年时间才能听懂普通话”，“我总是忘记汉字怎么写”，“我不知道怎么用中文表达我的感情”。
+                                语言障碍可能是最直观的困难之一。<br>
+                                根据深度访谈调查，有许多在华留学生表示，语言障碍是最大的挑战：</p>
+                            <p></p>
+                            <p class="m-auto line-height-3 cite">
+                                 “我花了两年时间才能听懂普通话”<br>
+                                “我总是忘记汉字怎么写”<br>
+                                “我不知道怎么用中文表达我的感情”。<br>
+                            </p>
+                            <p></p>
+                            <p class="m-auto line-height-3">
+                            除了语言障碍外，在华留学生还要面对中西方文化之间的差异。<br>这些文化差异在无形之间也导致在华留学生产生文化冲突、文化失落或者文化隔阂的情绪。
 
-                                除了语言障碍外，在华留学生还要面对中西方文化之间的差异。这些文化差异在无形之间也导致在华留学生产生文化冲突、文化失落或者文化隔阂的情绪。
+                            在本次研究中，我们还发现大多数在华留学生倾向于使用国外的社交平台，<br>如 WhatsApp、Instagram、Facebook 和 Tiktok 等。<br>
+                            相较之下，他们在我国的主流社交平台上活跃度较低，仅约 10%的受访者表示使用抖音，微博、B 站、小红书等平台的使用率则更低。
 
-                                在本次研究中，我们还发现大多数在华留学生倾向于使用国外的社交平台，如 WhatsApp、Instagram、Facebook 和 Tiktok 等，仅约 10%
-                                的受访者表示使用抖音。相较之下，他们在我国的主流社交平台，如微博、B 站、小红书等上的活跃度较低。
+                            针对这一现象，我们进一步探讨了原因。许多受访者表示，他们之所以倾向于使用国外社交平台，一方面是因为已经形成了使用习惯，另一方面则是因为我国的社交平台在功能和使用习惯上与他们所熟悉的平台存在较大差异。
 
-                                针对这一现象，我们进一步探讨了原因。许多受访者表示，他们之所以倾向于使用国外社交平台，一方面是因为已经形成了使用习惯，另一方面则是因为我国的社交平台在功能和使用习惯上与他们所熟悉的平台存在较大差异。
+                            “试过，但是我发现我对它们的功能和使用方式不太熟悉，所以我还是更喜欢使用那些平台。”
+                            “我觉得使用国外的社交平台让我更有归属感，因为我可以与我原来的朋友们保持联系。而在我国的社交平台上，我可能会感到有些孤独。”……
 
-                                “试过，但是我发现我对它们的功能和使用方式不太熟悉，所以我还是更喜欢使用那些平台。”
-                                “我觉得使用国外的社交平台让我更有归属感，因为我可以与我原来的朋友们保持联系。而在我国的社交平台上，我可能会感到有些孤独。”……
+                            而对于为何不使用国内的小红书、微博等平台，不少受访者还提出了使用方面的困难，其中一位受访者表示：“翻译功能不是很好用”，另一位留学生则提到：“很多地方，像是评论没法翻译，这对我的使用造成了困难”。
 
-                                而对于为何不使用国内的小红书、微博等平台，不少受访者还提出了使用方面的困难，其中一位受访者表示：“翻译功能不是很好用”，另一位留学生则提到：“很多地方，像是评论没法翻译，这对我的使用造成了困难”。
-
-                                这些反馈突显了语言障碍在使用中国社交媒体平台时可能构成的障碍。对于留学生而言，在使用这些平台时遇到的语言难题可能会影响他们与中国网民的互动，也可能导致信息获取的不便。
+                            这些反馈突显了语言障碍在使用中国社交媒体平台时可能构成的障碍。对于留学生而言，在使用这些平台时遇到的语言难题可能会影响他们与中国网民的互动，也可能导致信息获取的不便。
                             </p>
                         </div>
 
                         <!-- 移动端内容 -->
                         <div class="mobile-content">
                             <p class="m-auto line-height-3">
-                                根据调查，<br>约有 60%
-                                的受访者表示在中国学习期间，<br>他们遇到了适应中国的教育和学习方法方面的困难，<br>包括对不同的教学风格、考核方式和学术文化的不熟悉。
+                                根据调查，<br>约有 60% 的受访者表示在中国学习期间，他们遇到了适应中国的教育和学习方法方面的困难，<br>包括对不同的教学风格、考核方式和学术文化的不熟悉。
                             </p>
                             <p></p>
                             <p class="m-auto line-height-3">
-                                超过 70% 的受访者提到，<br>学习和使用汉语是他们在中国学习过程中面临的主要挑战之一，<br>这表明语言障碍对留学生来说可能是一个重要的文化适应问题。
+                                超过 70% 的受访者提到，学习和使用汉语是他们在中国学习过程中面临的主要挑战之一，<br>这表明语言障碍对留学生来说可能是一个重要的文化适应问题。
                             </p>
                             <p></p>
                             <p class="m-auto line-height-3">
@@ -356,13 +363,39 @@
                             </p>
                             <p></p>
                             <p class="m-auto line-height-3">
-                                约有 50% 的受访者提到他们在中国学习期间面临学业压力，<br>可能与不同的学习环境和要求有关。
+                                约有 50% 的受访者提到他们在中国学习期间面临学业压力，可能与不同的学习环境和要求有关。
+                            </p>
+                            <p></p>
+                            <p class="m-auto line-height-3">
+                                语言障碍可能是最直观的困难之一。<br>
+                                根据深度访谈调查，有许多在华留学生表示，语言障碍是最大的挑战：</p>
+                            <p></p>
+                            <p class="m-auto line-height-3 cite">
+                                 “我花了两年时间才能听懂普通话”<br>
+                                “我总是忘记汉字怎么写”<br>
+                                “我不知道怎么用中文表达我的感情”。<br>
+                            </p>
+                            <p></p>
+                            <p class="m-auto line-height-3">
+                            除了语言障碍外，在华留学生还要面对中西方文化之间的差异。<br>这些文化差异在无形之间也导致在华留学生产生文化冲突、文化失落或者文化隔阂的情绪。
+
+                            在本次研究中，我们还发现大多数在华留学生倾向于使用国外的社交平台，<br>如 WhatsApp、Instagram、Facebook 和 Tiktok 等。<br>
+                            相较之下，他们在我国的主流社交平台上活跃度较低，仅约 10%的受访者表示使用抖音，微博、B 站、小红书等平台的使用率则更低。
+
+                            针对这一现象，我们进一步探讨了原因。许多受访者表示，他们之所以倾向于使用国外社交平台，一方面是因为已经形成了使用习惯，另一方面则是因为我国的社交平台在功能和使用习惯上与他们所熟悉的平台存在较大差异。
+
+                            “试过，但是我发现我对它们的功能和使用方式不太熟悉，所以我还是更喜欢使用那些平台。”
+                            “我觉得使用国外的社交平台让我更有归属感，因为我可以与我原来的朋友们保持联系。而在我国的社交平台上，我可能会感到有些孤独。”……
+
+                            而对于为何不使用国内的小红书、微博等平台，不少受访者还提出了使用方面的困难，其中一位受访者表示：“翻译功能不是很好用”，另一位留学生则提到：“很多地方，像是评论没法翻译，这对我的使用造成了困难”。
+
+                            这些反馈突显了语言障碍在使用中国社交媒体平台时可能构成的障碍。对于留学生而言，在使用这些平台时遇到的语言难题可能会影响他们与中国网民的互动，也可能导致信息获取的不便。
                             </p>
                         </div>
                     </div>
                 </div>
             </div>
-        <div id="chapter-2-bottom"></div> <!-- 底部 -->
+            <div id="chapter-2-bottom"></div> <!-- 底部 -->
         </div>
     </div>
 
@@ -384,7 +417,8 @@
             </div>
         </div>
         <!-- 正文 -->
-        <div class="col-12 section-title text-center"  style="padding-bottom: 0px;" data-aos="fade-up" data-aos-duration="1100">
+        <div class="col-12 section-title text-center" style="padding-bottom: 0px;" data-aos="fade-up"
+            data-aos-duration="1100">
             <div class="container container-padding-top">
                 <!-- 电脑端内容 -->
                 <div class="desktop-content">
@@ -443,16 +477,16 @@
                 </div>
                 <!-- 电脑端内容 -->
                 <div class="desktop-content">
-                    <p class="m-auto line-height-3"> 
-                        在这里，他们是中外文化的交汇处，是跨越国界的心灵相遇点。
-
-                        在华留学生不仅是异域文化的传播者，更是中华文化向外传播的有机渠道。
-                        他们在学习、见证、传播中国政治、经济、文化的同时，为世界各国提供了了解真实中国的窗口。在中外交流中起到了重要的桥梁作用，对于向世界展现我国的真实面貌发挥了重要作用。
+                    <p class="m-auto line-height-3">
+                        在这里，他们是中外文化的交汇处，是跨越国界的心灵相遇点。<br>
+                        在华留学生不仅是异域文化的传播者，更是中华文化向外传播的有机渠道。<br>
+                        他们在学习、见证、传播中国政治、经济、文化的同时，为世界各国提供了了解真实中国的窗口。<br>
+                        在中外交流中起到了重要的桥梁作用，对于向世界展现我国的真实面貌发挥了重要作用。
                     </p>
                 </div>
                 <!-- 移动端内容 -->
                 <div class="mobile-content">
-                    <p class="m-auto line-height-3"> 
+                    <p class="m-auto line-height-3">
                         在这里，他们是中外文化的交汇处，是跨越国界的心灵相遇点。
 
                         在华留学生不仅是异域文化的传播者，更是中华文化向外传播的有机渠道。
