modified:   index.html

--- a/index.html
+++ b/index.html
@@ -312,31 +312,50 @@
                             <p class="m-auto line-height-3">
                                 约有 50% 的受访者提到他们在中国学习期间面临学业压力，可能与不同的学习环境和要求有关。
                             </p>
-                            <p></p>
+                            <span class="d-flex justify-content-center"></span>
                             <p class="m-auto line-height-3">
                                 语言障碍可能是最直观的困难之一。<br>
                                 根据深度访谈调查，有许多在华留学生表示，语言障碍是最大的挑战：</p>
                             <p></p>
                             <p class="m-auto line-height-3 cite">
-                                 “我花了两年时间才能听懂普通话”<br>
+                                “我花了两年时间才能听懂普通话”<br>
                                 “我总是忘记汉字怎么写”<br>
                                 “我不知道怎么用中文表达我的感情”。<br>
                             </p>
                             <p></p>
                             <p class="m-auto line-height-3">
-                            除了语言障碍外，在华留学生还要面对中西方文化之间的差异。<br>这些文化差异在无形之间也导致在华留学生产生文化冲突、文化失落或者文化隔阂的情绪。
+                                除了语言障碍外，在华留学生还要面对中西方文化之间的差异。<br>这些文化差异在无形之间也导致在华留学生产生文化冲突、文化失落或者文化隔阂的情绪。<br>
 
-                            在本次研究中，我们还发现大多数在华留学生倾向于使用国外的社交平台，<br>如 WhatsApp、Instagram、Facebook 和 Tiktok 等。<br>
-                            相较之下，他们在我国的主流社交平台上活跃度较低，仅约 10%的受访者表示使用抖音，微博、B 站、小红书等平台的使用率则更低。
+                                <br>
 
-                            针对这一现象，我们进一步探讨了原因。许多受访者表示，他们之所以倾向于使用国外社交平台，一方面是因为已经形成了使用习惯，另一方面则是因为我国的社交平台在功能和使用习惯上与他们所熟悉的平台存在较大差异。
+                                在本次研究中，我们还发现大多数在华留学生倾向于使用国外的社交平台，<br>如 WhatsApp、Instagram、Facebook 和 Tiktok 等。<br>
 
-                            “试过，但是我发现我对它们的功能和使用方式不太熟悉，所以我还是更喜欢使用那些平台。”
-                            “我觉得使用国外的社交平台让我更有归属感，因为我可以与我原来的朋友们保持联系。而在我国的社交平台上，我可能会感到有些孤独。”……
+                                相较之下，他们在我国的主流社交平台上活跃度较低，<br>仅约 10%的受访者表示使用抖音，微博、B 站、小红书等平台的使用率则更低。<br>
 
-                            而对于为何不使用国内的小红书、微博等平台，不少受访者还提出了使用方面的困难，其中一位受访者表示：“翻译功能不是很好用”，另一位留学生则提到：“很多地方，像是评论没法翻译，这对我的使用造成了困难”。
+                                <br>
 
-                            这些反馈突显了语言障碍在使用中国社交媒体平台时可能构成的障碍。对于留学生而言，在使用这些平台时遇到的语言难题可能会影响他们与中国网民的互动，也可能导致信息获取的不便。
+                                针对这一现象，我们进一步探讨了原因。<br>许多受访者表示，他们之所以倾向于使用国外社交平台，<br>一方面是因为已经形成了使用习惯，<br>另一方面则是因为我国的社交平台在功能和使用习惯上与他们所熟悉的平台存在较大差异。
+                            </p>
+                            <p></p>
+                            <p class="m-auto line-height-3 cite">
+                                “试过，但是我发现我对它们的功能和使用方式不太熟悉，所以我还是更喜欢使用那些平台。”<br>
+
+                                “我觉得使用国外的社交平台让我更有归属感，因为我可以与我原来的朋友们保持联系。而在我国的社交平台上，我可能会感到有些孤独。”<br>
+
+                                ……
+                            </p>
+                            <p></p>
+                            <p class="m-auto line-height-3">
+                                而对于为何不使用国内的小红书、微博等平台，不少受访者还提出了使用方面的困难，<br>其中一位受访者表示：
+                            <p></p>
+                            <p class="m-auto line-height-3 cite">“翻译功能不是很好用。”</p>
+                            <p></p>
+                            <p class="m-auto line-height-3">另一位留学生则提到：</p>
+                            <p></p>
+                            <p class="m-auto line-height-3 cite">“很多地方，像是评论没法翻译，这对我的使用造成了困难”。</p>
+                            <p></p>
+                            <p class="m-auto line-height-3">
+                                这些反馈突显了语言障碍在使用中国社交媒体平台时可能构成的障碍。对于留学生而言，在使用这些平台时遇到的语言难题可能会影响他们与中国网民的互动，也可能导致信息获取的不便。
                             </p>
                         </div>
 
@@ -371,25 +390,25 @@
                                 根据深度访谈调查，有许多在华留学生表示，语言障碍是最大的挑战：</p>
                             <p></p>
                             <p class="m-auto line-height-3 cite">
-                                 “我花了两年时间才能听懂普通话”<br>
+                                “我花了两年时间才能听懂普通话”<br>
                                 “我总是忘记汉字怎么写”<br>
                                 “我不知道怎么用中文表达我的感情”。<br>
                             </p>
                             <p></p>
                             <p class="m-auto line-height-3">
-                            除了语言障碍外，在华留学生还要面对中西方文化之间的差异。<br>这些文化差异在无形之间也导致在华留学生产生文化冲突、文化失落或者文化隔阂的情绪。
+                                除了语言障碍外，在华留学生还要面对中西方文化之间的差异。<br>这些文化差异在无形之间也导致在华留学生产生文化冲突、文化失落或者文化隔阂的情绪。
 
-                            在本次研究中，我们还发现大多数在华留学生倾向于使用国外的社交平台，<br>如 WhatsApp、Instagram、Facebook 和 Tiktok 等。<br>
-                            相较之下，他们在我国的主流社交平台上活跃度较低，仅约 10%的受访者表示使用抖音，微博、B 站、小红书等平台的使用率则更低。
+                                在本次研究中，我们还发现大多数在华留学生倾向于使用国外的社交平台，<br>如 WhatsApp、Instagram、Facebook 和 Tiktok 等。<br>
+                                相较之下，他们在我国的主流社交平台上活跃度较低，仅约 10%的受访者表示使用抖音，微博、B 站、小红书等平台的使用率则更低。
 
-                            针对这一现象，我们进一步探讨了原因。许多受访者表示，他们之所以倾向于使用国外社交平台，一方面是因为已经形成了使用习惯，另一方面则是因为我国的社交平台在功能和使用习惯上与他们所熟悉的平台存在较大差异。
+                                针对这一现象，我们进一步探讨了原因。许多受访者表示，他们之所以倾向于使用国外社交平台，一方面是因为已经形成了使用习惯，另一方面则是因为我国的社交平台在功能和使用习惯上与他们所熟悉的平台存在较大差异。
 
-                            “试过，但是我发现我对它们的功能和使用方式不太熟悉，所以我还是更喜欢使用那些平台。”
-                            “我觉得使用国外的社交平台让我更有归属感，因为我可以与我原来的朋友们保持联系。而在我国的社交平台上，我可能会感到有些孤独。”……
+                                “试过，但是我发现我对它们的功能和使用方式不太熟悉，所以我还是更喜欢使用那些平台。”
+                                “我觉得使用国外的社交平台让我更有归属感，因为我可以与我原来的朋友们保持联系。而在我国的社交平台上，我可能会感到有些孤独。”……
 
-                            而对于为何不使用国内的小红书、微博等平台，不少受访者还提出了使用方面的困难，其中一位受访者表示：“翻译功能不是很好用”，另一位留学生则提到：“很多地方，像是评论没法翻译，这对我的使用造成了困难”。
+                                而对于为何不使用国内的小红书、微博等平台，不少受访者还提出了使用方面的困难，其中一位受访者表示：“翻译功能不是很好用”，另一位留学生则提到：“很多地方，像是评论没法翻译，这对我的使用造成了困难”。
 
-                            这些反馈突显了语言障碍在使用中国社交媒体平台时可能构成的障碍。对于留学生而言，在使用这些平台时遇到的语言难题可能会影响他们与中国网民的互动，也可能导致信息获取的不便。
+                                这些反馈突显了语言障碍在使用中国社交媒体平台时可能构成的障碍。对于留学生而言，在使用这些平台时遇到的语言难题可能会影响他们与中国网民的互动，也可能导致信息获取的不便。
                             </p>
                         </div>
                     </div>
@@ -481,16 +500,32 @@
                         在这里，他们是中外文化的交汇处，是跨越国界的心灵相遇点。<br>
                         在华留学生不仅是异域文化的传播者，更是中华文化向外传播的有机渠道。<br>
                         他们在学习、见证、传播中国政治、经济、文化的同时，为世界各国提供了了解真实中国的窗口。<br>
-                        在中外交流中起到了重要的桥梁作用，对于向世界展现我国的真实面貌发挥了重要作用。
+                        在中外交流中起到了重要的桥梁作用，对于向世界展现我国的真实面貌发挥了重要作用。<br>
+                        在美丽的校园里，来自世界各地的留学生们汇聚一堂，共同学习、交流、成长。他们不仅为中华文化注入了新的活力，还将我国的优秀传统文化传播到了世界的各个角落。<br>
+                        <br>
+                        在我们的调查中，来自法国的留学生玛丽（化名）在我国学习期间，被中国书法的魅力深深吸引。<br>
+                        她不仅自己勤学苦练，还积极向法国的朋友们介绍书法艺术。<br>
+                        玛丽回到法国后，与志同道合的朋友们一起创办了一个书法协会，<br>
+                        定期举办书法展览和交流活动，让更多的人了解到了中国传统文化的魅力。<br>
+                        <br>
+                        不仅如此，许多留学生还将我国的传统节日晒到社交媒体上，与世界各地的朋友们分享。<br>
+                        例如，在春节期间，留学生们会通过照片和视频展示中国新年的独特氛围，如贴春联、包饺子、放鞭炮等。<br>
+                        这些富有中国特色的习俗吸引了世界各地的目光，让更多的人了解到了中国的传统文化和习俗。<br>
+                        用自己的实际行动，为世界提供了解真实中国的窗口，对向世界展现我国的真实面貌发挥了重要作用。
                     </p>
                 </div>
                 <!-- 移动端内容 -->
                 <div class="mobile-content">
                     <p class="m-auto line-height-3">
-                        在这里，他们是中外文化的交汇处，是跨越国界的心灵相遇点。
-
-                        在华留学生不仅是异域文化的传播者，更是中华文化向外传播的有机渠道。
-                        他们在学习、见证、传播中国政治、经济、文化的同时，为世界各国提供了了解真实中国的窗口。在中外交流中起到了重要的桥梁作用，对于向世界展现我国的真实面貌发挥了重要作用。
+                        在这里，他们是中外文化的交汇处，是跨越国界的心灵相遇点。<br>
+                        在华留学生不仅是异域文化的传播者，更是中华文化向外传播的有机渠道。<br>
+                        他们在学习、见证、传播中国政治、经济、文化的同时，为世界各国提供了了解真实中国的窗口。<br>
+                        在中外交流中起到了重要的桥梁作用，对于向世界展现我国的真实面貌发挥了重要作用。<br>
+                        在美丽的校园里，来自世界各地的留学生们汇聚一堂，共同学习、交流、成长。他们不仅为中华文化注入了新的活力，还将我国的优秀传统文化传播到了世界的各个角落。<br>
+                        在我们的调查中，来自法国的留学生玛丽（化名）在我国学习期间，被中国书法的魅力深深吸引。<br>
+                        她不仅自己勤学苦练，还积极向法国的朋友们介绍书法艺术。<br>
+                        玛丽回到法国后，与志同道合的朋友们一起创办了一个书法协会，定期举办书法展览和交流活动，让更多的人了解到了中国传统文化的魅力。<br>
+                        这些留学生们，用自己的实际行动，为世界提供了了解真实中国的窗口，对于向世界展现我国的真实面貌发挥了重要作用。
                     </p>
                 </div>
             </div>
@@ -504,11 +539,53 @@
         <div class="container container-padding-top">
             <div class="row">
                 <div class="col-12" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1100">
-                    <div class="section-title text-center">
+                    <div class="section-title text-center" style="padding-bottom: 0px;">
                         <div id="chapter-4-title"> <!-- 第四章标题 -->
                             <h2 class="m-auto">第四章</h2>
                             <h3 class="m-auto">展望</h3>
+                            <span class="d-flex justify-content-center"></span>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <!-- 正文 -->
+            <div class="col-12 section-title text-center" style="padding-top: 0px;" data-aos="fade-up"
+                data-aos-duration="1100">
+                <div class="container">
+                    <!-- 电脑端内容 -->
+                    <div class="desktop-content">
+                        <p class="m-auto line-height-3">
+                            随着全球疫情的逐渐控制，在华留学生的生活也将逐渐恢复正常。
+                            在疫情期间，很多留学生不得不在自己的国家进行线上学习，与老师和同学们进行远程交流。这种形式的交流虽然能够维持学习的进行，但是却无法取代面对面的交流和互动。
+                            在后疫情时代，我们希望在华留学生能够更加积极地参与到跨文化交际中来。在学习和生活中，他们可以主动与来自不同国家和地区的人交流，了解不同的文化和思维方式。这不仅可以拓宽视野，还可以提高跨文化交际的能力。
+                            同时，我们希望留学生们能够借助疫情期间的经验，探索新的跨文化交际方式。
+                            例如，可以通过线上交流平台，组织跨文化交流活动，让更多人参与到其中来。还可以利用社交媒体等工具，建立跨文化的社群，促进不同文化之间的交流和互动。
+                            在跨文化交际领域，我们还需要加强对留学生的心理支持和辅导。很多留学生面临着各种压力和挑战，如孤独、焦虑、抑郁等。因此，需要提供适当的心理支持和辅导，帮助他们更好地适应新环境，缓解压力和负面情绪。
+                        </p>
+                        <span class="d-flex justify-content-center"></span>
+                        <p class="m-auto line-height-3">
+                            在华留学生不仅是文化交流的使者，也是中华文化的传播者。我们期待通过心灵的碰撞，能够更好地通过在华留学生群体，传播中华文化，让更多的人了解和理解中国。
+                            通过开展相关活动，让留学生们能够深入学习和体验中华文化。通过阅读中国经典文献，参加各类文化活动，学习中国传统艺术和技艺等方式，深入理解和体验中华文化。将真实的、有深度的中华文化传播给世界。
+                            其次，我们希望留学生们能够用自己的语言和方式，将中华文化传播给世界。利用社交媒体平台，分享自己在中国的生活和学习经历，让更多的人了解中国。同时，他们也可以通过自己的行动，展示中华文化的价值观和精神风貌，让更多的人感受到中华文化的魅力。
+                            中华文化博大精深，以开放和包容的态度，面对文化的差异和冲突，才能有效传播中华文化。尊重和理解不同文化的存在和发展，以平等和互信的态度，让不同的文化交流碰撞。这样，才能最大程度发挥在华留学生传播中华文化的作用，真正成为文化交流的使者和桥梁，促进不同文化之间的交流和理解。
+                        </p>
+                    </div>
+                    <!-- 移动端内容 -->
+                    <div class="mobile-content">
+                        <p class="m-auto line-height-3">
+                            随着全球疫情的逐渐控制，在华留学生的生活也将逐渐恢复正常。
+                            在疫情期间，很多留学生不得不在自己的国家进行线上学习，与老师和同学们进行远程交流。这种形式的交流虽然能够维持学习的进行，但是却无法取代面对面的交流和互动。
+                            在后疫情时代，我们希望在华留学生能够更加积极地参与到跨文化交际中来。在学习和生活中，他们可以主动与来自不同国家和地区的人交流，了解不同的文化和思维方式。这不仅可以拓宽视野，还可以提高跨文化交际的能力。
+                            同时，我们希望留学生们能够借助疫情期间的经验，探索新的跨文化交际方式。
+                            例如，可以通过线上交流平台，组织跨文化交流活动，让更多人参与到其中来。还可以利用社交媒体等工具，建立跨文化的社群，促进不同文化之间的交流和互动。
+                            在跨文化交际领域，我们还需要加强对留学生的心理支持和辅导。很多留学生面临着各种压力和挑战，如孤独、焦虑、抑郁等。因此，需要提供适当的心理支持和辅导，帮助他们更好地适应新环境，缓解压力和负面情绪。
+                        </p>
+                        <p class="m-auto line-height-3">
+                            在华留学生不仅是文化交流的使者，也是中华文化的传播者。我们期待通过心灵的碰撞，能够更好地通过在华留学生群体，传播中华文化，让更多的人了解和理解中国。
+                            通过开展相关活动，让留学生们能够深入学习和体验中华文化。通过阅读中国经典文献，参加各类文化活动，学习中国传统艺术和技艺等方式，深入理解和体验中华文化。将真实的、有深度的中华文化传播给世界。
+                            其次，我们希望留学生们能够用自己的语言和方式，将中华文化传播给世界。利用社交媒体平台，分享自己在中国的生活和学习经历，让更多的人了解中国。同时，他们也可以通过自己的行动，展示中华文化的价值观和精神风貌，让更多的人感受到中华文化的魅力。
+                            中华文化博大精深，以开放和包容的态度，面对文化的差异和冲突，才能有效传播中华文化。尊重和理解不同文化的存在和发展，以平等和互信的态度，让不同的文化交流碰撞。这样，才能最大程度发挥在华留学生传播中华文化的作用，真正成为文化交流的使者和桥梁，促进不同文化之间的交流和理解。
+                        </p>
                     </div>
                 </div>
             </div>
@@ -521,7 +598,9 @@
             <div class="row">
                 <div class="col-12" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1100">
                     <div class="section-title text-center">
-                        <p class="m-auto">相关数据收集仍在进行中，将不时更新调查结果，并根据结果调整网页。</p>
+                        <p class="m-auto">本网页存档于2023/10/10。<br>
+                            大创项目相关数据收集仍在进行中，后续调查结果补充以及网页效果调整将在另一项目进行，本网页将不再更新。<br>
+                            （注：在不改动基本内容的情况下，不排除有后续bug修复和网站维护行为以确保网页能够正常打开）</p>
                         <span class="d-flex justify-content-center"></span>
                         <p class="m-auto">小组成员：夏荣鑫 张斐 谢建双</p>
                         <p class="m-auto">数据收集：夏荣鑫 张斐</p>
@@ -631,6 +710,13 @@
     function drawChart() {
         var data = google.visualization.arrayToDataTable([
             ['Year', '在校生数'],
+            ['2010', 147893],
+            ['2011', 168394],
+            ['2012', 172938],
+            ['2013', 189058],
+            ['2014', 203745],
+            ['2015', 224325],
+            ['2016', 264838],
             ['2017', 274809],
             ['2018', 307501],
             ['2019', 333072],
