modified:   index.html

--- a/index.html
+++ b/index.html
@@ -522,10 +522,16 @@
                         他们在学习、见证、传播中国政治、经济、文化的同时，为世界各国提供了了解真实中国的窗口。<br>
                         在中外交流中起到了重要的桥梁作用，对于向世界展现我国的真实面貌发挥了重要作用。<br>
                         在美丽的校园里，来自世界各地的留学生们汇聚一堂，共同学习、交流、成长。他们不仅为中华文化注入了新的活力，还将我国的优秀传统文化传播到了世界的各个角落。<br>
+                        <br>
                         在我们的调查中，来自法国的留学生玛丽（化名）在我国学习期间，被中国书法的魅力深深吸引。<br>
                         她不仅自己勤学苦练，还积极向法国的朋友们介绍书法艺术。<br>
-                        玛丽回到法国后，与志同道合的朋友们一起创办了一个书法协会，定期举办书法展览和交流活动，让更多的人了解到了中国传统文化的魅力。<br>
-                        这些留学生们，用自己的实际行动，为世界提供了了解真实中国的窗口，对于向世界展现我国的真实面貌发挥了重要作用。
+                        玛丽回到法国后，与志同道合的朋友们一起创办了一个书法协会，<br>
+                        定期举办书法展览和交流活动，让更多的人了解到了中国传统文化的魅力。<br>
+                        <br>
+                        不仅如此，许多留学生还将我国的传统节日晒到社交媒体上，与世界各地的朋友们分享。<br>
+                        例如，在春节期间，留学生们会通过照片和视频展示中国新年的独特氛围，如贴春联、包饺子、放鞭炮等。<br>
+                        这些富有中国特色的习俗吸引了世界各地的目光，让更多的人了解到了中国的传统文化和习俗。<br>
+                        用自己的实际行动，为世界提供了解真实中国的窗口，对向世界展现我国的真实面貌发挥了重要作用。
                     </p>
                 </div>
             </div>
@@ -551,7 +557,6 @@
             <!-- 正文 -->
             <div class="col-12 section-title text-center" style="padding-top: 0px;" data-aos="fade-up"
                 data-aos-duration="1100">
-                <div class="container">
                     <!-- 电脑端内容 -->
                     <div class="desktop-content">
                         <p class="m-auto line-height-3">
@@ -580,6 +585,7 @@
                             例如，可以通过线上交流平台，组织跨文化交流活动，让更多人参与到其中来。还可以利用社交媒体等工具，建立跨文化的社群，促进不同文化之间的交流和互动。
                             在跨文化交际领域，我们还需要加强对留学生的心理支持和辅导。很多留学生面临着各种压力和挑战，如孤独、焦虑、抑郁等。因此，需要提供适当的心理支持和辅导，帮助他们更好地适应新环境，缓解压力和负面情绪。
                         </p>
+                        <span class="d-flex justify-content-center"></span>
                         <p class="m-auto line-height-3">
                             在华留学生不仅是文化交流的使者，也是中华文化的传播者。我们期待通过心灵的碰撞，能够更好地通过在华留学生群体，传播中华文化，让更多的人了解和理解中国。
                             通过开展相关活动，让留学生们能够深入学习和体验中华文化。通过阅读中国经典文献，参加各类文化活动，学习中国传统艺术和技艺等方式，深入理解和体验中华文化。将真实的、有深度的中华文化传播给世界。
@@ -587,7 +593,6 @@
                             中华文化博大精深，以开放和包容的态度，面对文化的差异和冲突，才能有效传播中华文化。尊重和理解不同文化的存在和发展，以平等和互信的态度，让不同的文化交流碰撞。这样，才能最大程度发挥在华留学生传播中华文化的作用，真正成为文化交流的使者和桥梁，促进不同文化之间的交流和理解。
                         </p>
                     </div>
-                </div>
             </div>
             <div id="chapter-4-bottom"></div> <!-- 底部 -->
         </div>
@@ -599,14 +604,14 @@
             <div class="row">
                 <div class="col-12" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1100">
                     <div class="section-title text-center">
-                        <p class="m-auto">本网页存档于2023/10/10。<br>
+                        <p class="m-auto line-height-3">本网页存档于2023/10/10。<br>
                             大创项目相关数据收集仍在进行中，后续调查结果补充以及网页效果调整将在另一项目进行，本网页将不再更新。<br>
                             （注：在不改动基本内容的情况下，不排除有后续bug修复和网站维护行为以确保网页能够正常打开）</p>
                         <span class="d-flex justify-content-center"></span>
-                        <p class="m-auto">小组成员：夏荣鑫 张斐 谢建双</p>
-                        <p class="m-auto">数据收集：夏荣鑫 张斐</p>
-                        <p class="m-auto">网站制作：谢建双</p>
-                        <p class="m-auto">指导教师：陈杰</p>
+                        <p class="m-auto line-height-3">小组成员：夏荣鑫 张斐 谢建双</p>
+                        <p class="m-auto line-height-3">数据收集：夏荣鑫 张斐</p>
+                        <p class="m-auto line-height-3">网站制作：谢建双</p>
+                        <p class="m-auto line-height-3">指导教师：陈杰</p>
                     </div>
                 </div>
             </div>
