modified:   index.html

--- a/index.html
+++ b/index.html
@@ -604,9 +604,9 @@
             <div class="row">
                 <div class="col-12" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1100">
                     <div class="section-title text-center">
-                        <p class="m-auto line-height-3">本网页存档于2023/10/10。<br>
-                            大创项目相关数据收集仍在进行中，后续调查结果补充以及网页效果调整将在另一项目进行，本网页将不再更新。<br>
-                            （注：在不改动基本内容的情况下，不排除有后续bug修复和网站维护行为以确保网页能够正常打开）</p>
+                        <p class="m-auto line-height-3">
+                            大创项目相关数据收集仍在进行中，后续将不定期更新完善。
+                        </p>
                         <span class="d-flex justify-content-center"></span>
                         <p class="m-auto line-height-3">小组成员：夏荣鑫 张斐 谢建双</p>
                         <p class="m-auto line-height-3">数据收集：夏荣鑫 张斐</p>
