--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="assets/css/vendor/vendor.min.css">
     <link rel="stylesheet" href="assets/css/plugins/plugins.min.css">
     <link rel="stylesheet" href="assets/css/style.min.css">
@@ -384,7 +383,7 @@
                             <p class="m-auto line-height-3">
                                 约有 50% 的受访者提到他们在中国学习期间面临学业压力，可能与不同的学习环境和要求有关。
                             </p>
-                            <p></p>
+                            <span class="d-flex justify-content-center"></span>
                             <p class="m-auto line-height-3">
                                 语言障碍可能是最直观的困难之一。<br>
                                 根据深度访谈调查，有许多在华留学生表示，语言障碍是最大的挑战：</p>
@@ -396,18 +395,37 @@
                             </p>
                             <p></p>
                             <p class="m-auto line-height-3">
-                                除了语言障碍外，在华留学生还要面对中西方文化之间的差异。<br>这些文化差异在无形之间也导致在华留学生产生文化冲突、文化失落或者文化隔阂的情绪。
+                                除了语言障碍外，在华留学生还要面对中西方文化之间的差异。<br>这些文化差异在无形之间也导致在华留学生产生文化冲突、文化失落或者文化隔阂的情绪。<br>
+
+                                <br>
 
                                 在本次研究中，我们还发现大多数在华留学生倾向于使用国外的社交平台，<br>如 WhatsApp、Instagram、Facebook 和 Tiktok 等。<br>
-                                相较之下，他们在我国的主流社交平台上活跃度较低，仅约 10%的受访者表示使用抖音，微博、B 站、小红书等平台的使用率则更低。
 
-                                针对这一现象，我们进一步探讨了原因。许多受访者表示，他们之所以倾向于使用国外社交平台，一方面是因为已经形成了使用习惯，另一方面则是因为我国的社交平台在功能和使用习惯上与他们所熟悉的平台存在较大差异。
+                                相较之下，他们在我国的主流社交平台上活跃度较低，<br>仅约 10%的受访者表示使用抖音，微博、B 站、小红书等平台的使用率则更低。<br>
 
-                                “试过，但是我发现我对它们的功能和使用方式不太熟悉，所以我还是更喜欢使用那些平台。”
-                                “我觉得使用国外的社交平台让我更有归属感，因为我可以与我原来的朋友们保持联系。而在我国的社交平台上，我可能会感到有些孤独。”……
+                                <br>
 
-                                而对于为何不使用国内的小红书、微博等平台，不少受访者还提出了使用方面的困难，其中一位受访者表示：“翻译功能不是很好用”，另一位留学生则提到：“很多地方，像是评论没法翻译，这对我的使用造成了困难”。
+                                针对这一现象，我们进一步探讨了原因。<br>许多受访者表示，他们之所以倾向于使用国外社交平台，<br>一方面是因为已经形成了使用习惯，<br>另一方面则是因为我国的社交平台在功能和使用习惯上与他们所熟悉的平台存在较大差异。
+                            </p>
+                            <p></p>
+                            <p class="m-auto line-height-3 cite">
+                                “试过，但是我发现我对它们的功能和使用方式不太熟悉，所以我还是更喜欢使用那些平台。”<br>
 
+                                “我觉得使用国外的社交平台让我更有归属感，因为我可以与我原来的朋友们保持联系。而在我国的社交平台上，我可能会感到有些孤独。”<br>
+
+                                ……
+                            </p>
+                            <p></p>
+                            <p class="m-auto line-height-3">
+                                而对于为何不使用国内的小红书、微博等平台，不少受访者还提出了使用方面的困难，<br>其中一位受访者表示：
+                            <p></p>
+                            <p class="m-auto line-height-3 cite">“翻译功能不是很好用。”</p>
+                            <p></p>
+                            <p class="m-auto line-height-3">另一位留学生则提到：</p>
+                            <p></p>
+                            <p class="m-auto line-height-3 cite">“很多地方，像是评论没法翻译，这对我的使用造成了困难”。</p>
+                            <p></p>
+                            <p class="m-auto line-height-3">
                                 这些反馈突显了语言障碍在使用中国社交媒体平台时可能构成的障碍。对于留学生而言，在使用这些平台时遇到的语言难题可能会影响他们与中国网民的互动，也可能导致信息获取的不便。
                             </p>
                         </div>
