modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
         <div class="mobile-content">
             <h3 class="title">前言</h3>
-            <h4 class="m-auto">在华留学生：文化的“跨界”使者</h4>
+            <h4 class="m-auto" style="letter-spacing: 0px;">在华留学生：文化的“跨界”使者</h4>
         </div>
 
     </div>
@@ -79,7 +79,7 @@
         </div>
         <div class="mobile-content">
             <h3 class="title">第二章</h3>
-            <h4 class="m-auto">在华留学生与文化适应</h4>
+            <h4 class="m-auto" style="letter-spacing: 0px;">在华留学生与文化适应</h4>
         </div>
     </div>
 
@@ -89,7 +89,7 @@
         </div>
         <div class="mobile-content">
             <h3 class="title">第三章</h3>
-            <h4 class="m-auto">在华留学生与文化交际</h4>
+            <h4 class="m-auto" style="letter-spacing: 0px;">在华留学生与文化交际</h4>
         </div>
     </div>
 
@@ -99,7 +99,7 @@
         </div>
         <div class="mobile-content">
             <h3 class="title">第四章</h3>
-            <h4 class="m-auto">展望</h4>
+            <h4 class="m-auto" style="letter-spacing: 0px;">展望</h4>
         </div>
     </div>
 
