modified:   index.html

--- a/index.html
+++ b/index.html
@@ -623,13 +623,16 @@
                 <div class="col-12" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1100">
                     <div class="section-title text-center">
                         <p class="m-auto line-height-3">
+                            《跨文化交际视野下的在京高校留学生认知与适应效果的实况研究》
+                        </p>
+                        <p class="m-auto line-height-3">
                             大创项目相关数据收集仍在进行中，后续将不定期更新完善。
                         </p>
                         <span class="d-flex justify-content-center"></span>
                         <p class="m-auto line-height-3">小组成员：夏荣鑫 张斐 谢建双</p>
                         <p class="m-auto line-height-3">数据收集：夏荣鑫 张斐</p>
                         <p class="m-auto line-height-3">网站制作：谢建双</p>
-                        <p class="m-auto line-height-3">指导教师：陈杰</p>
+                        <p class="m-auto line-height-3">指导教师：赵挺</p>
                     </div>
                 </div>
             </div>
